--- a/XFormWebService_SqlLite_Demo/XFormWebService_SqlLite_Demo/XFormWebService_SqlLite_Demo.csproj
+++ b/XFormWebService_SqlLite_Demo/XFormWebService_SqlLite_Demo/XFormWebService_SqlLite_Demo.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Data\DbRepo.cs" />
     <Compile Include="Data\MySQLiteRepo.cs" />
     <Compile Include="Data\MySQLiteRepoAsync.cs" />
+    <Compile Include="View\Trigger\ValidateInputInteger_Trigger.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -81,5 +82,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="View\Trigger\" />
   </ItemGroup>
 </Project>
