--- a/XFormWebService_SqlLite_Demo/XFormWebService_SqlLite_Demo/XFormWebService_SqlLite_Demo.csproj
+++ b/XFormWebService_SqlLite_Demo/XFormWebService_SqlLite_Demo/XFormWebService_SqlLite_Demo.csproj
@@ -43,6 +43,10 @@
     <Compile Include="Data\MySQLiteRepo.cs" />
     <Compile Include="Data\MySQLiteRepoAsync.cs" />
     <Compile Include="View\Trigger\ValidateInputInteger_Trigger.cs" />
+    <Compile Include="View\WeatherMasterPage.xaml.cs">
+      <DependentUpon>WeatherMasterPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModel\WeatherMasterPageVM.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -77,6 +81,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="View\MainPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\WeatherMasterPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
