--- a/XFormWebService_SqlLite_Demo/iOS/XFormWebService_SqlLite_Demo.iOS.csproj
+++ b/XFormWebService_SqlLite_Demo/iOS/XFormWebService_SqlLite_Demo.iOS.csproj
@@ -119,6 +119,8 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="SQLite_iOS.cs" />
+    <Compile Include="CustomRenderer\MyListViewRenderer.cs" />
+    <Compile Include="CustomRenderer\MyViewCellRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ITunesArtwork Include="ITunesArtwork" />
@@ -126,4 +128,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
+  <ItemGroup>
+    <Folder Include="CustomRenderer\" />
+  </ItemGroup>
 </Project>
